salesforce/force-app/main/default/objects/Agent_Audit_Record__c/Agent_Audit_Record__c.object-meta.xml
<CustomObject>
    <description>An individual action record within an AgentLedger audit session. Each record is cryptographically chained to the previous record via SHA-256 hashing.</description>
    <label>Agent Audit Record</label>
    <nameField>
        <displayFormat>AAR-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Audit Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>