salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Action_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Action_Timestamp__c</fullName>
    <description>When this action was performed by the agent</description>
    <label>Action Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>