salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of action the agent performed</description>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Tool_Call</fullName>
                <label>Tool Call</label>
            </value>
            <value>
                <fullName>Calculation</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>