salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>Identifier for the AI agent</description>
    <label>Agent ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>