salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Audit_Session__c.field-meta.xml
<CustomField>
    <fullName>Audit_Session__c</fullName>
    <description>Parent audit session this record belongs to</description>
    <label>Audit Session</label>
    <referenceTo>Agent_Audit_Session__c</referenceTo>
    <relationshipLabel>Audit Records</relationshipLabel>
    <relationshipName>Audit_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>