salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Input_Context__c.field-meta.xml
<CustomField>
    <fullName>Input_Context__c</fullName>
    <description>JSON representation of the input/context provided to the agent for this action</description>
    <label>Input Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>