salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Output_Result__c.field-meta.xml
<CustomField>
    <fullName>Output_Result__c</fullName>
    <description>JSON representation of the output/result produced by the agent</description>
    <label>Output Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>