salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Previous_Hash__c.field-meta.xml
<CustomField>
    <fullName>Previous_Hash__c</fullName>
    <description>SHA-256 hash of the previous record in the chain. Null for the first record in a session.</description>
    <label>Previous Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>