salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <description>The agent reasoning or explanation for this action</description>
    <label>Reasoning</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>