salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Record_Hash__c.field-meta.xml
<CustomField>
    <fullName>Record_Hash__c</fullName>
    <description>SHA-256 hash of this record content plus the previous record hash</description>
    <label>Record Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>