salesforce/force-app/main/default/objects/Agent_Audit_Record__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>Position in the session action sequence (0-indexed)</description>
    <label>Sequence Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>